# reem_controllers

./: .gitmodules  stack.xml
joint_group_position_controller/include/joint_group_position_controller/: joint_group_position_controller.h
joint_group_position_controller/src/: joint_group_position_controller.cpp
reem_head_action/src/: reem_point_frame.cpp
sot_controller/: .gitignore  .gitignore~  CMakeLists.txt  mainpage.dox  mainpage.dox~  manifest.xml  manifest.xml~  sot_controller_plugins.xml  sot_controller_plugins.xml~
sot_controller/include/sot_controller/: sot_controller.h  sot_device.h  sot_reem_controller.h  sot_reem_device.h
sot_controller/launch/: demo.launch  sot_controller.launch  sot_controller_demo.launch
sot_controller/python/: .project  .pydevproject  main.py  prologue.py  startup.py  test_limits.py
sot_controller/python_code/: demo.py  demo_tracking.py  demo_tracking_weights.py  demo_weights.py  launch.py  launch_demo.py  main.py  reem_inequality_demo.py  reem_reach.py  reem_tracking.py  reem_tracking_weights.py  reem_velocity_damping.py  reem_velocity_damping_demo.py  reem_weights.py  rrbot_velocity_damping.py  sot_ros_api.py  startup.py  test.py  test_limits.py
sot_controller/python_code/sot_reem/: humanoid_robot.py  prologue.py  robot.py
sot_controller/python_code/sot_robot/: prologue.py  robot.py
sot_controller/python_code/utilities/: kinematics.py  rosinterface.py  sot.py  tasks.py
sot_controller/src/: sot_controller.cpp  sot_device.cpp  sot_reem_controller.cpp  sot_reem_device.cpp
